# github-actions-cmake-example

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  cache-preload.cmake
.github/workflows/: cmake-single-platform.yml
include/xmpl/: Factorial.h
src/: CMakeLists.txt  main.cpp
src/app/: CMakeLists.txt  main.cpp
src/xmpl/: CMakeLists.txt  Factorial.cpp
test/: CMakeLists.txt  Factorial_test.cpp
